--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="/app.css">
   </head>
   <body>
-    <div class="container">
-      <h1 class="jumbotron">Hello World</h1>
-      <h4>You've got bootstrap!</h4>
-    </div>
+    <!-- <div ng-include="'views/nav.html'"></div> -->
+    <div ui-view></div>
+    <!-- <div ng-include="'views/footer.html'"></div> -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="/vendor.js"></script>
     <script src="/app.js"></script>
