added font awesome

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,9 +13,8 @@
     <link rel="stylesheet" href="/app.css">
   </head>
   <body>
-    <div class="container">
-      <h1 class="jumbotron">Hello World</h1>
-      <h4>You've got bootstrap!</h4>
+    <div ui-view>
+
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="/vendor.js"></script>
