--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="my-app">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/app.css">
   </head>
   <body>
-    <!-- <div ui-view></div> -->
-    <div ng-view></div>
+    <div ui-view></div>
+    <!-- <div ng-view></div> -->
 
     <!-- <div class="container">
       <h1 class="jumbotron">Hello World</h1>
